--- a/src/main/resources/dbconfig.properties
+++ b/src/main/resources/dbconfig.properties
@@ -24,12 +24,20 @@
 #jdbc.dbType=mysql
 
 #Oracle
-hibernate.dialect=org.hibernate.dialect.OracleDialect
+hibernate.dialect=org.ltd3000framework.hibernate.dialect.XOracleDialect
 validationQuery.sql=SELECT 1 FROM DUAL
 jdbc.url.jeecg=jdbc:oracle:thin:@fldevd-scan.feili.com:1521/wmstestsrv
 jdbc.username.jeecg=INFOREXT
 jdbc.password.jeecg=INFOREXT201903
 jdbc.dbType=oracle
 
+
+#zhengshi
+#hibernate.dialect=org.ltd3000framework.hibernate.dialect.XOracleDialect
+#validationQuery.sql=SELECT 1 FROM DUAL
+#jdbc.url.jeecg=jdbc:oracle:thin:@infoadg-scan.feili.com:1521/pdbwmspubsrv.feili.com
+#jdbc.username.jeecg=INFOREXT
+#jdbc.password.jeecg=INFOREXT2019
+#jdbc.dbType=oracle
 #\u66f4\u65b0|\u521b\u5efa|\u9a8c\u8bc1\u6570\u636e\u5e93\u8868\u7ed3\u6784|\u4e0d\u4f5c\u6539\u53d8     \u9ed8\u8ba4update(create,validate,none)
 hibernate.hbm2ddl.auto=none
