--- a/src/main/resources/jeecg/jeecg_database.properties
+++ b/src/main/resources/jeecg/jeecg_database.properties
@@ -12,6 +12,13 @@ username=INFOREXT
 password=INFOREXT201903
 database_name=INFOREXT
 
+#zhengshi
+#diver_name=oracle.jdbc.driver.OracleDriver
+#url=jdbc:oracle:thin:@infoadg-scan.feili.com:1521/pdbwmspubsrv.feili.com
+#username=INFOREXT
+#password=INFOREXT2019
+#database_name=INFOREXT
+
 #postgre
 #diver_name=org.postgresql.Driver
 #url=jdbc:postgresql://localhost:5432/jeecg
